sprint mission 8: 코드 수정